cmss/main/default/objects/CrossSellingClosure__c/CrossSellingClosure__c.object-meta.xml
<CustomObject>
    <label>Cross Selling Closure</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross Selling Closures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>