cmss/main/default/objects/CrossSellingClosure__c/fields/AcquisitionMethod__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionMethod__c</fullName>
    <label>Acquisition Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>