cmss/main/default/objects/CrossSellingClosure__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Cross Selling Closures</relationshipLabel>
    <relationshipName>CrossSellingClosures</relationshipName>
    <type>Lookup</type>
</CustomField>