cmss/main/default/objects/CrossSellingClosure__c/fields/ChangeID__c.field-meta.xml
<CustomField>
    <fullName>ChangeID__c</fullName>
    <label>Change ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>