cmss/main/default/objects/CrossSellingClosure__c/fields/ClosingAgentId__c.field-meta.xml
<CustomField>
    <fullName>ClosingAgentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Agent Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CrossSellingClosures</relationshipName>
    <type>Lookup</type>
</CustomField>