cmss/main/default/objects/CrossSellingClosure__c/fields/ContractAttendanceStamp__c.field-meta.xml
<CustomField>
    <fullName>ContractAttendanceStamp__c</fullName>
    <label>Contracts Attendance Stamp</label>
    <type>Date</type>
</CustomField>