cmss/main/default/objects/CrossSellingClosure__c/fields/InsuranceAmountChange__c.field-meta.xml
<CustomField>
    <fullName>InsuranceAmountChange__c</fullName>
    <label>Insurance Amount Change</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>