cmss/main/default/objects/CrossSellingClosure__c/fields/InsuranceChange__c.field-meta.xml
<CustomField>
    <fullName>InsuranceChange__c</fullName>
    <label>Insurance Change</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>