cmss/main/default/objects/CrossSellingClosure__c/fields/InsuranceValue__c.field-meta.xml
<CustomField>
    <fullName>InsuranceValue__c</fullName>
    <label>Insurance Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>