cmss/main/default/objects/CrossSellingClosure__c/fields/MonthFeeEmployer__c.field-meta.xml
<CustomField>
    <fullName>MonthFeeEmployer__c</fullName>
    <label>Month Fee Employer</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>