cmss/main/default/objects/CrossSellingClosure__c/fields/MonthFeeParticipant__c.field-meta.xml
<CustomField>
    <fullName>MonthFeeParticipant__c</fullName>
    <label>Month Fee Participant</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>