cmss/main/default/objects/CrossSellingClosure__c/fields/OriginalMonthFeeThirdPerson__c.field-meta.xml
<CustomField>
    <fullName>OriginalMonthFeeThirdPerson__c</fullName>
    <label>Original Month Fee Third Person</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>