cmss/main/default/objects/CrossSellingClosure__c/fields/OrigMonthFeeEmployer__c.field-meta.xml
<CustomField>
    <fullName>OrigMonthFeeEmployer__c</fullName>
    <label>Original Month Fee Employer</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>