cmss/main/default/objects/CrossSellingClosure__c/fields/OrigMonthFeeParticipant__c.field-meta.xml
<CustomField>
    <fullName>OrigMonthFeeParticipant__c</fullName>
    <label>Original Month Fee Participant</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>