cmss/main/default/objects/CrossSellingClosure__c/fields/OrigMonthFeeThirdPerson__c.field-meta.xml
<CustomField>
    <fullName>OrigMonthFeeThirdPerson__c</fullName>
    <label>Original Month Fee Third Person</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>