cmss/main/default/objects/CrossSellingClosure__c/fields/RecordCreationDate__c.field-meta.xml
<CustomField>
    <fullName>RecordCreationDate__c</fullName>
    <label>Record Creation Date</label>
    <type>Date</type>
</CustomField>