cmss/main/default/objects/CrossSellingClosure__c/fields/TipsterId__c.field-meta.xml
<CustomField>
    <fullName>TipsterId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipster Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CrossSellingClosuresTipster</relationshipName>
    <type>Lookup</type>
</CustomField>